--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
   gtag('config', 'AW-17384230951');
 </script>
 
+<!-- Event snippet for Compra conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17384230951/5U7tCNa4k_waEKegueFA',
+      'value': 50.0,
+      'currency': 'BRL',
+      'transaction_id': ''
+  });
+</script>
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17026714686"></script>
 <script>
